feat: ajustes backend antes da organização